--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ log = "0.4.27"
 simple_logger = "5.0.0"
 clap = { version = "4.5.45", features = ["derive"] }
 anyhow = "1.0.99"
-dialoguer="0.11.0"
+dialoguer = "0.12.0"
+zip = "4.5.0"
+walkdir = "2.5.0"
