--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2024"
 serde = { version = "1.0.219", features = ["derive"] }
 reqwest = { version = "0.12.23", features = ["blocking"] }
 serde_json = "1.0.143"
-log = "0.4.27"
-simple_logger = "5.0.0"
 clap = { version = "4.5.45", features = ["derive"] }
 anyhow = "1.0.99"
 dialoguer = "0.12.0"
 zip = "4.5.0"
 walkdir = "2.5.0"
+progress_bar = "1.2.1"
+terminal_size = "0.4.3"
+thiserror = "2.0.16"
