--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,9 @@ serde = { version = "1.0.219", features = ["derive"] }
 reqwest = { version = "0.12.23", features = ["blocking"] }
 serde_json = "1.0.143"
 clap = { version = "4.5.45", features = ["derive"] }
-anyhow = "1.0.99"
 dialoguer = "0.12.0"
 zip = "4.5.0"
 walkdir = "2.5.0"
 progress_bar = "1.2.1"
 terminal_size = "0.4.3"
-thiserror = "2.0.16"
+console = "0.16.0"
