--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ progress_bar = "1.2.1"
 terminal_size = "0.4.3"
 console = "0.16.0"
 indexmap = { version = "2.11.0", features = ["serde"] }
+reqwest-retry = "0.7.0"
+reqwest-middleware = "0.4.2"
+tokio = {  version = "1.47.1", features = ["rt", "rt-multi-thread"] }
