--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "packrinth"
+description = "CLI tool for creating and maintaining your own Minecraft modpack"
+authors = ["Thijzert <184778919+Thijzert123@users.noreply.github.com>"]
+license = "MIT"
 version = "0.1.0"
 edition = "2024"
 
