--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ indexmap = { version = "2.11.0", features = ["serde"] }
 reqwest-retry = "0.7.0"
 reqwest-middleware = "0.4.2"
 tokio = {  version = "1.47.1", features = ["rt", "rt-multi-thread"] }
+clap_complete = "4.5.57"
