--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ reqwest-retry = "0.7.0"
 reqwest-middleware = "0.4.2"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
 clap_complete = "4.5.57"
+gix = "0.73.0"
 
 [build-dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
