--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ reqwest-middleware = "0.4.2"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
 clap_complete = "4.5.57"
 gix = "0.73.0"
+semver = "1.0.26"
 
 [build-dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
