--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["Thijzert <184778919+Thijzert123@users.noreply.github.com>"]
 license = "MIT"
 version = "0.1.0"
 edition = "2024"
+include = ["src/", "*.md"]
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
