--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,3 +7,6 @@ url: https://thijzert123.github.io/packrinth
 
 aux_links:
   GitHub Repository: https://github.com/Thijzert123/packrinth
+
+footer:
+  powered_by: false
