docs: Update docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,4 +6,5 @@ color_scheme: dark
 url: https://thijzert123.github.io/packrinth
 
 aux_links:
+  crates.io: https://crates.io/crates/packrinth
   GitHub Repository: https://github.com/Thijzert123/packrinth
