--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,3 +8,8 @@ url: https://thijzert123.github.io/packrinth
 aux_links:
   crates.io: https://crates.io/crates/packrinth
   GitHub Repository: https://github.com/Thijzert123/packrinth
+
+callouts:
+  warning:
+    title: Warning
+    color: yellow
