--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   release:
-    types: [published]
+    types: [created]
 
 env:
   CARGO_INCREMENTAL: 0
@@ -64,7 +64,7 @@ jobs:
         if: endsWith(matrix.target, 'windows-msvc')
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          bin: my-bin
+          bin: packrinth
           target: ${{ matrix.target }}
           tar: all
           zip: windows
