--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ include = ["src/", "*.md"]
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
-reqwest = { version = "0.12.23", features = ["blocking"] }
+reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking"] }
 serde_json = "1.0.143"
 clap = { version = "4.5.46", features = ["derive"] }
 dialoguer = "0.12.0"
