docs: Add Generating documentation

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ url: https://thijzert123.github.io/packrinth
 
 aux_links:
   crates.io: https://crates.io/crates/packrinth
-  Lib documentation: https://docs.rs/packrinth
+  Lib Documentation: https://docs.rs/packrinth
   GitHub Repository: https://github.com/Thijzert123/packrinth
 
 callouts:
