chore: Update release-plz.toml

--- a/release-plz.toml
+++ b/release-plz.toml
@@ -6,7 +6,8 @@ release_always = false
 [changelog]
 commit_parsers = [
     { message = "^feat", group = "added" },
-    { message = "^changed", group = "changed" },
+    { message = "^add", group = "added" },
+    { message = "^change", group = "changed" },
     { message = "^deprecated", group = "deprecated" },
     { message = "^fix", group = "fixed" },
     { message = "^security", group = "security" },
