--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -29,23 +29,23 @@ jobs:
       matrix:
         include:
           - target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04
+            os: ubuntu-latest
           - target: aarch64-unknown-linux-musl
-            os: ubuntu-22.04
+            os: ubuntu-latest
           - target: aarch64-apple-darwin
-            os: macos-13
+            os: macos-latest
           - target: aarch64-pc-windows-msvc
-            os: windows-2022
+            os: windows-latest
           - target: x86_64-unknown-linux-gnu
-            os: ubuntu-22.04
+            os: ubuntu-latest
           - target: x86_64-unknown-linux-musl
-            os: ubuntu-22.04
+            os: ubuntu-latest
           - target: x86_64-apple-darwin
-            os: macos-13
+            os: macos-latest
           - target: x86_64-pc-windows-msvc
-            os: windows-2022
+            os: windows-latest
           - target: x86_64-unknown-freebsd
-            os: ubuntu-22.04
+            os: ubuntu-latest
     timeout-minutes: 60
     steps:
       - name: Checkout repository
